--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                      / /  _ _
                     (_.-.'O'-'.        HEADER INFO  -->
 
-  <header class="draggy" role="banner">
+  <!-- <header class="draggy" role="banner">
     <div class="controls">
       <button role="button" class="ui-dragger">
         <img src="assets/draggybits/dragger.png" alt="move controls window">
@@ -72,7 +72,7 @@
 
     <h1>make 8-bit art!</h1>
     <ul id="minimized-tools-list" role="navigation"></ul>
-  </header>
+  </header> -->
 
 <!--
                        _..--+~/@-~--.
@@ -91,7 +91,7 @@
 -->
 
   <section id="what" class="draggy" title="what is this?" data-title="what">
-    <div class="controls">
+    <!-- <div class="controls">
       <button role="button" class="ui-dragger">
         <img src="assets/draggybits/dragger.png" alt="move controls window">
       </button>
@@ -106,7 +106,7 @@
 
     <p>if you make something cool, i wanna see it – tweet me at <a href="http://twitter.com/jennschiffer" target="_blank">@jennschiffer</a>!</p>
 
-    <p>if you really enjoy this and want to support it, you can do so indirectly by <a href="http://www.blackgirlscode.com/" target="_blank">donating to black girls code</a>!</p>
+    <p>if you really enjoy this and want to support it, you can do so indirectly by <a href="http://www.blackgirlscode.com/" target="_blank">donating to black girls code</a>!</p> -->
   </section>
 
   <!--
@@ -132,9 +132,9 @@
       <button role="button" class="ui-dragger">
         <img src="assets/draggybits/dragger.png" alt="move controls window">
       </button>
-      <button role="button" class="ui-hider">
+      <!-- <button role="button" class="ui-hider">
         <img src="assets/draggybits/hider.png" alt="move controls window">
-      </button>
+      </button> -->
     </div>
 
     <div id="instruments" class="inner">
@@ -153,7 +153,7 @@
       </ul>
     </div>
 
-    <div id="editing" class="inner">
+    <!-- <div id="editing" class="inner">
       <h2>editing</h2>
       <ul role="toolbar">
         <li>
@@ -180,14 +180,14 @@
       <button role="button" class="text-button" id="undo" disabled="disabled">undo</button>
       <button role="button" class="text-button" id="redo" disabled="disabled">redo</button>
       <button role="button" class="text-button" id="new-canvas">new canvas</button>
-    </div>
+    </div>-->
 
-    <div id="size" class="inner">
+    <!-- <div id="size" class="inner">
       <h2>brush size</h2>
       <input id="pixel-size" class="pixel-size-input" type="number" min="2" max="100" step="1" value="15" />
       <input id="pixel-size-slider" class="pixel-size-input" type="range" min="2" max="100" step="1" value="15" />
       <div id="pixel-size-demo" class="color-demo"> </div>
-    </div>
+    </div>  -->
   </section>
 
   <!--
@@ -211,7 +211,7 @@
      _||_|__              FILE BOX -->
 
   <section id="filebox" class="draggy" title="import/save" data-title="import-save">
-    <div class="controls">
+    <!-- <div class="controls">
       <button role="button" class="ui-dragger">
         <img src="assets/draggybits/dragger.png" alt="move controls window">
       </button>
@@ -256,7 +256,7 @@
 
     <ul class="instructions save">
       <li>click and drag to select the area of the canvas you want to save.</li>
-    </ul>
+    </ul> -->
   </section>
 
   <!--
@@ -283,14 +283,14 @@
       <button role="button" class="ui-dragger">
         <img src="assets/draggybits/dragger.png" alt="move controls window">
       </button>
-      <button role="button" class="ui-hider">
+      <!-- <button role="button" class="ui-hider">
         <img src="assets/draggybits/hider.png" alt="move controls window">
-      </button>
+      </button> -->
     </div>
 
     <div class="tabs" role="navigation">
         <button role="button" class="pickers active" data-href="#pickers">color pickers</button>
-        <button role="button" class="palettes" data-href="#custom-palettes">history/custom palettes</button>
+        <button role="button" class="palettes" data-href="#custom-palettes">history palettes</button>
     </div>
 
     <div id="pickers">
@@ -329,7 +329,7 @@
         </div>
       </div>
 
-      <div id="color-custom" class="palettes inner">
+      <!-- <div id="color-custom" class="palettes inner">
         <h2 class="color-upload-label">custom palette:</h2>
         <ul class="color-custom-list colors clearfix"></ul>
         <div id="color-custom-tools">
@@ -338,13 +338,13 @@
           <input type="file" name="upload-palette" class="import" />
           <button role="button" class="text-button clear">clear palette</button>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </section>
 
   <section id="save-modal-container" class="modal hidden">
-    <div id="save-modal" class="inside-modal">
+    <!-- <div id="save-modal" class="inside-modal">
       <div class="controls">
         <button role="button" class="ui-hider">
           <img src="assets/draggybits/hider.png" alt="move controls window">
@@ -357,11 +357,11 @@
         <button role="button" class="text-button" id="save-imgur">Or upload to imgur.com!</button>
       </p>
       <p id="link-imgur"></p>
-    </div>
+    </div> -->
   </section>
 
   <section id="open-modal-container" class="modal hidden">
-    <div id="open-modal" class="inside-modal">
+    <!-- <div id="open-modal" class="inside-modal">
       <div class="controls">
         <button role="button" class="ui-hider">
           <img src="assets/draggybits/hider.png" alt="move controls window">
@@ -372,11 +372,11 @@
       <h3>wanna open one? click a thumbnail...</h3>
 
       <ul class="gallery"> </ul>
-    </div>
+    </div> -->
   </section>
 
   <section id="pxon-modal-container" class="modal hidden">
-    <div id="open-modal" class="inside-modal">
+    <!-- <div id="open-modal" class="inside-modal">
       <div class="controls">
         <button role="button" class="ui-hider">
           <img src="assets/draggybits/hider.png" alt="move controls window">
@@ -391,10 +391,15 @@
       <textarea></textarea>
 
       <p><strong>note: pxon is a draft proposal and a fake idea by me (jenn, creator of make8bitart.com) that's being updated sporadically and sometimes doesn't work. please let me know if it's broken!</strong></p>
-    </div>
+    </div> -->
   </section>
 
-<script type="text/javascript">
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
+
+<!-- <script type="text/javascript">
   if('serviceWorker' in navigator) {
     navigator.serviceWorker
              .register('service-worker.js')
@@ -407,6 +412,6 @@
 </script>
 <script src="https://pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
-<noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript>
+<noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript> -->
   </body>
 </html>
