--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>make 8-bit art!</title>
+  <title>FitPlace</title>
   <link rel="preload" href="/assets/fonts/8bit-Art-Sans-subset.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/VT323-Regular-subset.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="build/make8bitart.min.css" />
@@ -289,7 +289,7 @@
     </div>
 
     <div class="tabs" role="navigation">
-        <button role="button" class="pickers active" data-href="#pickers">color pickers</button>
+        <button role="button" class="pickers active" data-href="#pickers">colour pickers</button>
         <button role="button" class="palettes" data-href="#custom-palettes">history palettes</button>
     </div>
 
