--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <li><button role="button" class="button color primary black" title="black" data-color="rgba(0, 0, 0, 1)"> </button></li>
         <li><button role="button" class="button color primary gray" title="gray" data-color="rgba(128, 128, 128, 1)"> </button></li>
         <li><button role="button" class="button color primary white" title="white" data-color="rgba(255, 255, 255, 1)"> </button></li>
-        <li><button role="button" class="button color transparent" title="erase" data-color="rgba(0, 0, 0, 0)"> </button></li>
+        <!-- <li><button role="button" class="button color transparent" title="erase" data-color="rgba(0, 0, 0, 0)"> </button></li> -->
       </ul>
 
       <div id="eight-bit-picker">
@@ -395,9 +395,9 @@
   </section>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
+  <!-- <script>
     var socket = io();
-  </script>
+  </script> -->
 
 <!-- <script type="text/javascript">
   if('serviceWorker' in navigator) {
